@@ -21,17 +21,17 @@
             <artifactId>p6spy</artifactId>
             <version>3.9.1</version>
         </dependency>
-        <!--  https://mvnrepository.com/artifact/mysql/mysql-connector-java  -->
+        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.30</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.2.0</version>
         </dependency>
         <!--  https://mvnrepository.com/artifact/org.hibernate/hibernate-core-jakarta  -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core-jakarta</artifactId>
-            <version>5.6.11.Final</version>
+            <version>5.6.15.Final</version>
         </dependency>
         <!--  https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
@@ -41,18 +41,4 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
